Fix Railway build and retheme for Roblox middleman

--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "description": "TradeUp React landing page",
   "main": "server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "prestart": "npm run build",
+    "dev": "node ./node_modules/vite/bin/vite.js",
+    "build": "node ./node_modules/vite/bin/vite.js build",
     "start": "node server.js"
   },
   "dependencies": {
